--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Pranav Kumar
-#logo:
+logo: WhatsApp Image 2024-07-15 at 7.11.26 PM.jpeg
 description: Hey!This is my Machine Learning Portfolio
 #show_downloads: true
 theme: jekyll-theme-minimal
